style.css
body{
    margin: 0;
    padding: 0;
    font-size: 21px;
    color:azure;
    box-sizing: border-box;
    overflow-x: hidden;
overflow-y: auto;}


.container {
    height: 100vh;
    width: 100%;
    background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(library.jpeg);
    background-position: center;
    background-size: cover;
    padding-right: 10%;
    padding-left: 12%;
padding-top: 10%;}

* {
	box-sizing: border-box;
}

::-webkit-scrollbar {
	width: 20px;
}

::-webkit-scrollbar-track {
	background: #ae9d72;
	background-image: url("https://www.transparenttextures.com/patterns/black-paper.png");
}

::-webkit-scrollbar-thumb {
	background: #ae9d72;
}

::-webkit-scrollbar-thumb:hover {
	background: #8bba98;
}

body {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	height: 100vh;
	overflow: hidden;
	margin: 0;
	padding: 0;
	font-family: "Josefin Slab", serif;
}

h1 { color: #a32b2b; font-family: 'Droid serif', serif; font-size: 60px; font-weight: 400; font-style: italic; line-height: 44px; margin: 0 0 12px; text-align: center; }
p { color: #fafcff; font-size: 20px; font-family: "Libre Baskerville", serif; line-height: 45px; text-align: center; padding-top: 20px; }

.background {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background: url("https://picsum.photos/id/112/3840/2160");
	background-size: cover;
	background-position: center top;
	z-index: -1;
	filter: blur(10px);
}

.navbar{ width: 100%;
margin: auto;
padding: 25px;
justify-content: space-between;
align-items: center;
background-color: rgb(12, 12, 18);
text-decoration:none; 
font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;}

.navbar a {
    float: right;
    justify-content: center;
    color: #f2f2f2;
    text-align: center;
    padding: 4px 9px;
    text-decoration: none;
    font-size: 19px;
  }

  .navbar a:hover {
    background-color: #000000;
    color: rgb(160, 20, 20);}

   
  a.button2{
    display:inline-block;
    padding:0.9em 10em;
    border:0.16em solid #FFFFFF;
    margin:0 0.3em 0.3em 0;
    padding-right: 10%;
    padding-left: 10%;
    margin-top: 1%;
    margin-left: 35%;
    box-sizing: border-box;
    text-decoration:none;
    text-transform:uppercase;
    text-align:center;
    font-family:'Roboto',sans-serif;
    font-weight:400;
    color:#FFFFFF;
    text-align:center;
    transition: all 0.15s}
   
    a.button2:hover{
    color:#a32b2b;
 border-color:#a32b2b;
    }

    a.button2:active{
    color:#BBBBBB;
    border-top-color:#BBBBBB;
    @media all and (max-width:30em)}

    a.button2:{
        margin-left: auto;
        margin-right: auto;
        width: 8em
    } 
    

